samples/_failures_safe/1761248204_e0d49a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_879fc758.c:160: error: expected ‘;’, ‘,’ or ‘)’ at end of input
